<resources>
    <string name="app_url">10.0.3.99</string>
    <string name="app_name">Trading platform</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="group_menu_title">My trading platform</string>
    <string name="action_address">Address</string>
    <string name="action_order">My order</string>
    <string name="action_watch_list">My watch list</string>
    <string name="action_wallet">My wallet</string>
    <string name="action_message">My message</string>
    <string name="subheader">More</string>
    <string name="action_signup">Sign up</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Log out</string>
    <string name="action_accountsetting">Account</string>
    <string name="label_accountsetting">Account Setting</string>
    <string name="action_help">Help</string>
    <string name="cannot_connect_server">The server cannot be connected</string>
    <string name="loading">Loading</string>

    <string name="bssmenu_buy">Join a deal</string>
    <string name="bssmenu_sell">Find opportunity</string>


    <string name="buymenu_display">Product</string>
    <string name="buymenu_groupbuy">GroupBuy</string>
    <string name="buymenu_bulk">Bulk</string>
    <string name="buymenu_watch_list">Watch list</string>


    <string name="sellmenu_selling">Selling</string>
    <string name="sellmenu_scheduled">Scheduled</string>
    <string name="sellmenu_add">Add item</string>
    <string name="sellmenu_bulk">Bulk</string>


    <string name="sharemenu_share_item">Share item</string>
    <string name="sharemenu_customize">Customize</string>
    <string name="sharemenu_history">History</string>
    <string name="sharemenu_statistics">Statistics</string>


    <!--Sign up-->
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Mobile</string>
    <string name="hint_verify_code">Verification Code</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_verify">NEXT</string>
    <string name="btn_confirm">VERIFY</string>
    <string name="btn_link_to_login">Already Registered! <u>Login</u>.</string>
    <string name="btn_link_to_register">Not Registered?  <u>Sign up</u> now.</string>
    <string name="title_signup_phone">Sign Up with Phone</string>
    <string name="title_signup_email">Sign Up with Email</string>

    <!--Login-->
    <string name="login_name">Email or Phone</string>
    <string name="btn_login">LOGIN</string>
    <string name="err_msg_name">Enter your phone number or email</string>
    <string name="err_msg_name_only">Enter your full name</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_mismatch">Password confirmation does not match password !</string>
    <string name="err_msg_phone">Enter your phone number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="login_user_name">Guest</string>

    <!--Account Setting -->
    <string name="hint_lang">Language</string>
    <string name="hint_address1">Address 1</string>
    <string name="hint_address2">Address 2</string>
    <string name="hint_address3">Address 3</string>
    <string name="label_role_setting">Role Setting</string>
    <string name="hint_comName">Company Name</string>
    <string name="hint_comProfile">Company Description</string>
    <string name="hint_comWebsite">Company Website</string>
    <string name="hint_comPhone">Office Phone</string>
    <string name="hint_comProduct">Company Product</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_individual">Individual</string>
    <string name="radio_company">Company</string>

    <!--QR code reader-->
    <string name="scan_text">Align the QR Code within the frame to scan</string>
    <!--Share-->
    <string name="hint_url">Enter URL</string>
</resources>
