<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_address"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_address" />
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_message" />
        <item
            android:id="@+id/nav_order"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_order" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_wallet" />
        <item
            android:id="@+id/nav_watch_list"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_watch_list" />
    </group>

    <item android:title="@string/subheader">
        <menu>
            <item
                android:id="@+id/sign_up"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/action_signup" />
            <item
                android:id="@+id/login"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/action_login" />
        </menu>
    </item>


</menu>