<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <Spinner
            android:id="@+id/phone_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/phone_area"
            android:scrollbarStyle="insideOverlay" />

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/phone_code"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|bottom|center_horizontal"
                android:paddingBottom="10dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:typeface="serif" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:phoneNumber="true"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_code"
                    android:drawablePadding="10dip"
                    android:drawableStart="@drawable/icon_code"
                    android:hint="@string/hint_verify_code"
                    android:inputType="number"
                    android:phoneNumber="true"
                    android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_confirm"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/btn_verify"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="#7e7e7f" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>