<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="76dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:src="@drawable/icon_login"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:text="Trading Platform"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="26dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_username"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/icon_username"
                android:hint="@string/login_name"
                android:singleLine="true"
                android:typeface="serif" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_login_pwd"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/icon_login_pwd"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:typeface="serif" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:typeface="serif"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15dp" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>