<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/input_name_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/icon_fullname"
                            android:drawablePadding="10dip"
                            android:drawableStart="@drawable/icon_fullname"
                            android:hint="@string/hint_name"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1.53"
                        android:gravity="bottom|center"
                        android:paddingLeft="30dp"
                        android:visibility="visible">

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/gender_group"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:text="@string/radio_male"
                                android:textColor="#7e7e7e"
                                android:textSize="16dp" />

                            <RadioButton
                                android:id="@+id/rb_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/radio_female"
                                android:textColor="#7e7e7e"
                                android:textSize="16dp" />
                        </RadioGroup>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dip"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:background="#c2c2c2"
                        android:visibility="visible" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_mobile_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:drawableLeft="@drawable/icon_code"
                            android:drawablePadding="10dip"
                            android:drawableStart="@drawable/icon_code"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/hint_phone"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_email_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/icon_email"
                            android:drawablePadding="10dip"
                            android:drawableStart="@drawable/icon_email"
                            android:hint="@string/hint_email"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_lang_setting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/icon_language"
                            android:drawablePadding="10dip"
                            android:drawableStart="@drawable/icon_language"
                            android:hint="@string/hint_lang"
                            android:singleLine="true"
                            android:textSize="16dp"
                            android:typeface="sans" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="DONE"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>